# wyascheme

./: .gitignore  .gitmodules  readme.org  shell.nix  wyascheme.cabal
app/: Main.hs
data/: stdlib.scm  test.scm  test2.scm
lib/: Eval.hs  Lisp.hs  Parse.hs  Types.hs
lib/Lisp/: Eval.hs  Parse.hs  Primitive.hs  Types.hs
lib/parse/: Lisp.hs
tests/: Test.hs
tests/parse/: Test.hs
