cabal-version:      2.4
name:               wyascheme
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             atriw
maintainer:         875241499@qq.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md
data-files: data

executable wyascheme
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      mtl,
                      optparse-applicative,
                      lisp
    hs-source-dirs:   app
    default-language: Haskell2010

library lisp
   exposed-modules:  Lisp
   other-modules:    Lisp.Types
                    ,Lisp.Parse
                    ,Lisp.Eval
                    ,Lisp.Primitive
   build-depends:    base ^>=4.14.3.0,
                     parsec,
                     mtl
   hs-source-dirs:   lib
   default-language: Haskell2010

test-suite test-lisp
   type: exitcode-stdio-1.0
   main-is: Test.hs
   hs-source-dirs:   tests
   default-language: Haskell2010
   build-depends:    base ^>=4.14.3.0,
                     tasty >= 0.11 && < 1.4,
                     hspec,
                     raw-strings-qq,
                     tasty-hspec,
                     parsec,
                     mtl,
                     lisp
